--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,5 +1,5 @@
 # Hugo configuration file
-title: My Site
+title: WASP
 
 # import hextra as module
 module:
@@ -24,29 +24,25 @@ menu:
     - name: About
       pageRef: /about
       weight: 2
-    - name: Contact ↗
-      url: "https://github.com/imfing"
-      weight: 3
     - name: Search
-      weight: 4
+      weight: 3
       params:
         type: search
     - name: GitHub
-      weight: 5
-      url: "https://github.com/imfing/hextra-starter-template"
+      weight: 4
+      url: "https://github.com/"
       params:
         icon: github
-    - name: Twitter
-      weight: 6
-      url: "https://twitter.com/"
-      params:
-        icon: x-twitter
 
 params:
   navbar:
     displayTitle: true
-    displayLogo: false
-
+    displayLogo: true
+    logo:
+      path: images/logo.png
+      link: / 
+      width: 40
+      height: 40
   footer:
     displayCopyright: false
     displayPoweredBy: true
